# docs/swagger.json
@@ -5,34 +5,37 @@
     },
     "paths": {
         "/lyrics": {
-            "post": {
-                "consumes": [
-                    "application/json"
-                ],
+            "get": {
+                "description": "Retrieves the requested couplet number from the specified song.",
                 "produces": [
                     "text/plain"
                 ],
-                "summary": "Returns song`s lyrics",
+                "summary": "Returns a specific couplet from a song's lyrics",
                 "parameters": [
                     {
-                        "description": "JSON song lyrics data",
-                        "name": "song",
-                        "in": "body",
-                        "required": true,
-                        "schema": {
-                            "$ref": "#/definitions/httphandlers.SongLyricsRequest"
-                        }
+                        "type": "integer",
+                        "description": "Song ID",
+                        "name": "song_id",
+                        "in": "query",
+                        "required": true
+                    },
+                    {
+                        "type": "integer",
+                        "description": "Couplet Number",
+                        "name": "couplet_num",
+                        "in": "query",
+                        "required": true
                     }
                 ],
                 "responses": {
-                    "201": {
-                        "description": "Song ID",
+                    "200": {
+                        "description": "Couplet text",
                         "schema": {
-                            "$ref": "#/definitions/httphandlers.returnableID"
+                            "type": "string"
                         }
                     },
                     "204": {
-                        "description": "Requested couplet number is bigger than len of couplets"
+                        "description": "Requested couplet number is bigger than the number of couplets"
                     },
                     "400": {
                         "description": "Bad request"
@@ -68,7 +71,7 @@
                     }
                 ],
                 "responses": {
-                    "201": {
+                    "200": {
                         "description": "Success"
                     },
                     "400": {
@@ -98,7 +101,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/entities.Song"
+                            "$ref": "#/definitions/httphandlers.SongMessage"
                         }
                     }
                 ],
@@ -106,7 +109,7 @@
                     "201": {
                         "description": "Song ID",
                         "schema": {
-                            "$ref": "#/definitions/httphandlers.returnableID"
+                            "$ref": "#/definitions/entities.IDMessage"
                         }
                     },
                     "400": {
@@ -118,7 +121,7 @@
                 }
             },
             "delete": {
-                "description": "Deletes current song by id. Only ID is required.",
+                "description": "Deletes current song by id.",
                 "consumes": [
                     "application/json"
                 ],
@@ -133,7 +136,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/entities.Song"
+                            "$ref": "#/definitions/entities.IDMessage"
                         }
                     }
                 ],
@@ -151,7 +154,7 @@
             }
         },
         "/songs": {
-            "get": {
+            "post": {
                 "description": "filtration and pagination are supported",
                 "consumes": [
                     "application/json"
@@ -194,6 +197,14 @@
         }
     },
     "definitions": {
+        "entities.IDMessage": {
+            "type": "object",
+            "properties": {
+                "id": {
+                    "type": "integer"
+                }
+            }
+        },
         "entities.Song": {
             "type": "object",
             "properties": {
@@ -231,22 +242,14 @@
                 }
             }
         },
-        "httphandlers.SongLyricsRequest": {
+        "httphandlers.SongMessage": {
             "type": "object",
             "properties": {
-                "couplet_num": {
-                    "type": "integer"
+                "group": {
+                    "type": "string"
                 },
-                "song_id": {
-                    "type": "integer"
-                }
-            }
-        },
-        "httphandlers.returnableID": {
-            "type": "object",
-            "properties": {
-                "id": {
-                    "type": "integer"
+                "song": {
+                    "type": "string"
                 }
             }
         }
